--- a/views/tenantpaymentlist.ejs
+++ b/views/tenantpaymentlist.ejs
@@ -3,7 +3,7 @@
 
 <head>
 	<!-- Title -->
-	<title>Omah - Real Estate Admin Dashboard Template</title>
+	<title>Soaro - Real Estate Admin Dashboard Template</title>
  
 	<!-- Meta -->
 	<meta charset="utf-8">
