--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -8,19 +8,19 @@
 <div class="deznav">
     <div class="deznav-scroll">
         <ul class="metismenu" id="menu">
-            <li><a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
-                    <i class="flaticon-dashboard-1"></i>
-                    <span class="nav-text">Dashboard</span>
-                </a>
-                <ul aria-expanded="false">
-                    <li><a href="/dashboard">Dashboard</a></li>
-                    <!-- <li><a href="analytics.html">Analytics</a></li>
-                    <li><a href="review.html">Review</a></li>
-                    <li><a href="order-list.html">Order List</a></li>
-                    <li><a href="customer-list.html">Customer</a></li> -->
-                    
-                </ul>
-            </li>
+            <% if (userDetails.roleId === 0) { %>
+                <li><a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
+                        <i class="flaticon-dashboard-1"></i>
+                        <span class="nav-text">Dashboard</span>
+                    </a>
+                    <ul aria-expanded="false">
+                        <li><a href="/dashboard">Dashboard</a></li>
+                        
+                        
+                    </ul>
+                </li>
+             
+            <% } %>
             <li><a class="has-arrow ai-icon" href="javascript:void(0)" aria-expanded="false">
                     <i class="flaticon-381-battery-5"></i>
                     <span class="nav-text">Lawyers</span>
@@ -35,18 +35,34 @@
                 </ul>
             </li>
             <li><a class="has-arrow ai-icon" href="javascript:void(0)" aria-expanded="false">
-                <i class="flaticon-381-controls"></i>
-                    <span class="nav-text">Users</span>
+                    <i class="flaticon-381-battery-5"></i>
+                    <span class="nav-text">Notices</span>
                     
                 </a>
                 <ul aria-expanded="false">
-                    <li><a href="/user?type=add">Add User</a></li>
+                    <!-- <li><a href="/lawyer?type=add">Add Lawyer</a></li> -->
                     <!-- <li><a href="add-agent-wizard.html">Add Lawyer Wizard</a></li> -->
-                    <li><a href="/user">All User</a></li>
+                    <li><a href="/lawyer">All Notices Sms</a></li>
                     <!-- <li><a href="agent-profile.html">Agent Profile</a></li> -->
                     
                 </ul>
             </li>
+            <% if (userDetails.roleId === 0) { %>
+                <li><a class="has-arrow ai-icon" href="javascript:void(0)" aria-expanded="false">
+                    <i class="flaticon-381-controls"></i>
+                        <span class="nav-text">Users</span>
+                        
+                    </a>
+                    <ul aria-expanded="false">
+                        <li><a href="/user?type=add">Add User</a></li>
+                        <!-- <li><a href="add-agent-wizard.html">Add Lawyer Wizard</a></li> -->
+                        <li><a href="/user">All User</a></li>
+                        <!-- <li><a href="agent-profile.html">Agent Profile</a></li> -->
+                        
+                    </ul>
+                </li>
+             
+            <% } %>
             <li><a class="has-arrow ai-icon" href="javascript:void(0)" aria-expanded="false">
                     <i class="flaticon-381-layer-1"></i>
                     <span class="nav-text">Property</span>
