--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -40,9 +40,9 @@
                     
                 </a>
                 <ul aria-expanded="false">
-                    <!-- <li><a href="/lawyer?type=add">Add Lawyer</a></li> -->
+                    <!-- <li><a href="/lawyer?type=add"></a></li> -->
                     <!-- <li><a href="add-agent-wizard.html">Add Lawyer Wizard</a></li> -->
-                    <li><a href="/lawyer">All Notices Sms</a></li>
+                    <li><a href="/sms">All Notices Sms</a></li>
                     <!-- <li><a href="agent-profile.html">Agent Profile</a></li> -->
                     
                 </ul>
