adding commission for users

--- a/views/property.ejs
+++ b/views/property.ejs
@@ -763,6 +763,10 @@
 														<li>Acquired Date: <%= item.start %> </br> Agreement End Date: <%= item.end %></li></br>
 
 													<% } %>
+													<div class="" style="display: flex;gap: 10px;">
+														<p>Created by: </p>
+														<h5><%=item.created_by_name%></h5>
+													</div>
 													
                                                     <li class=""><a href="javascript:void(0);"><svg width="24px" height="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M7 4H4V7" stroke="#5b5101" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
