--- a/views/propertyanalytics.ejs
+++ b/views/propertyanalytics.ejs
@@ -771,6 +771,7 @@
 							</div>
 						</div>
 					</div>
+					
 					<div class="col-xl-3  col-md-6">
 						<div class="card">
 							<div class="card-body">
@@ -781,6 +782,27 @@
 
 									
 										<span class="fs-14 text-black">Total occupied Room </span>
+									</div>
+									<span class="bg-primary rounded p-3">
+										<svg width="28" height="28" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M15.1208 37.6042H1.97909C1.10825 37.6042 0.395752 36.8917 0.395752 36.0208V14.1708C0.395752 13.775 0.554085 13.3 0.870752 13.0625L14.0124 0.791659C14.4874 0.395825 15.1208 0.237492 15.6749 0.474992C16.3083 0.791659 16.6249 1.34583 16.6249 1.97916V36.1C16.6249 36.8917 15.9124 37.6042 15.1208 37.6042ZM3.48325 34.5167H13.5374V5.54166L3.48325 14.8833V34.5167Z" fill="white"></path>
+											<path d="M36.0208 37.6042H15.0416C14.1708 37.6042 13.4583 36.8917 13.4583 36.0208V17.4167C13.4583 16.5458 14.1708 15.8333 15.0416 15.8333H36.0208C36.8916 15.8333 37.6041 16.5458 37.6041 17.4167V36.1C37.6041 36.8917 36.8916 37.6042 36.0208 37.6042ZM16.6249 34.5167H34.5166V18.9208H16.6249V34.5167Z" fill="white"></path>
+											<path d="M28.5791 37.6042H22.4832C21.6124 37.6042 20.8999 36.8917 20.8999 36.0208V26.3625C20.8999 25.4917 21.6124 24.7792 22.4832 24.7792H28.5791C29.4499 24.7792 30.1624 25.4917 30.1624 26.3625V36.0208C30.1624 36.8917 29.4499 37.6042 28.5791 37.6042ZM24.0666 34.5167H27.0749V27.9458H24.0666V34.5167Z" fill="white"></path>
+										</svg>
+									</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xl-3  col-md-6">
+						<div class="card">
+							<div class="card-body">
+								<div class="media align-items-center">
+									<div class="media-body">
+									
+										<h3><%= formattedAmountUserCommission ? formattedAmountUserCommission : '0' %></h3>
+
+										<span class="fs-14 text-black">Total User Commission </span>
 									</div>
 									<span class="bg-primary rounded p-3">
 										<svg width="28" height="28" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
