--- a/views/addproperty.ejs
+++ b/views/addproperty.ejs
@@ -627,7 +627,7 @@
                             <div class="card-header">
                                 <h4 class="card-title">Add Property</h4>
 								
-									<a class="btn-primary btn" href="/property?type=addfresh" style="color: #fff;">create freshland</a>
+									<a class="btn-primary btn" href="/property?type=addfresh" style="color: #fff;">create new Acquired Property</a>
 							
                             </div>
                             <div class="card-body">
@@ -696,11 +696,19 @@
                                         <input type="number" required name="totalroom" class="form-control" placeholder="input a number"" min="1">
                                       </div>
                                       <div class="mb-3 col-lg-4 col-md-6">
-                                        <label class="form-label">How Many 1Bed</label>
+                                        <label class="form-label">How Many MiniFlat</label>
+                                        <input type="number" required name="miniflat" class="form-control" placeholder="input a number"" min="1">
+                                      </div>
+                                      <div class="mb-3 col-lg-4 col-md-6">
+                                        <label class="form-label">MiniFlat Amount</label>
+                                        <input type="number" required name="miniflatamount" class="form-control" placeholder="input a number"" min="1">
+                                      </div>
+                                      <div class="mb-3 col-lg-4 col-md-6">
+                                        <label class="form-label">How Many A RoomSelf</label>
                                         <input type="number" required name="bedcount1" class="form-control" placeholder="input a number"" min="1">
                                       </div>
                                       <div class="mb-3 col-lg-4 col-md-6">
-                                        <label class="form-label">1Bed Amount</label>
+                                        <label class="form-label">A RoomSelf Amount</label>
                                         <input type="number" required name="bedamount1" class="form-control" placeholder="input a number"" min="1">
                                       </div>
                                       <div class="mb-3 col-lg-4 col-md-6">
