--- a/views/property.ejs
+++ b/views/property.ejs
@@ -774,7 +774,7 @@
                                                     <path d="M7 20H4V17" stroke="#5b5101" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                                     <path d="M17 20H20V17" stroke="#5b5101" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                                     </svg>
-                                                    <%=item.sqm%>sqft</a></li>
+                                                    <%=item.sqm%></a></li>
                                                 </ul>
                                             </div>
                                             <p style="color: #5b5101;"><%=item.description%></p>
