--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -135,10 +135,10 @@
             
         </ul>
     
-        <div class="copyright">
+        <!-- <div class="copyright">
             <p><strong>Omah Dashboard</strong> © <span class="current-year">2024</span> All Rights Reserved</p>
             <p>by DexignZone</p>
-        </div>
+        </div> -->
     </div>
 </div>
 <script>
